@@ -17,6 +17,7 @@
 package org.spockframework.mock.runtime;
 
 import org.spockframework.mock.*;
+import org.spockframework.util.ExceptionUtil;
 
 import java.util.*;
 
@@ -38,10 +39,20 @@ public class InteractionScope implements IInteractionScope {
 
       @Override
       public Object accept(IMockInvocation invocation) {
-        Object result = super.accept(invocation);
-        if (currentExecutionZone > myRegistrationZone)
-          throw new WrongInvocationOrderError(decorated, invocation);
+        WrongInvocationOrderError wrongInvocationOrderError = null;
+        if (currentExecutionZone > myRegistrationZone) {
+          wrongInvocationOrderError = new WrongInvocationOrderError(decorated, invocation);
+        }
         currentExecutionZone = myRegistrationZone;
+
+        Object result = null;
+        Throwable invocationException = null;
+        try {
+          result = super.accept(invocation);
+        } catch (AssertionError | Exception e) {
+          invocationException = e;
+        }
+        ExceptionUtil.throwWithSuppressed(invocationException, wrongInvocationOrderError);
         return result;
       }
     });
